--- a/style.css
+++ b/style.css
@@ -574,6 +574,122 @@ padding-bottom: 50px;
       margin: 0 5% ;
     }
 
+/*  -------------------------------costamers------------------*/
+
+    .cosmoter_review{
+
+  position: relative;
+  width: 100%;
+  height: 100vh;
+/*  background-color: cyan;*/
+  margin-top: 120px;
+}
+
+.cosmoter_review_img{
+
+  height: auto;
+  width: 100%;
+  position: absolute;
+  text-align: center;
+}
+
+.cosmoter_review_img > img{
+
+  height:auto ;
+  width: 100%;
+/*  filter: blur(0.3px);*/
+}
+
+.first_image{
+
+  position: absolute;
+  top:20%;
+  color: #fff;
+  text-align: center;
+  width: 100%;
+  font-family:'Inter', sans-serif ;
+  font-size: 1.6vw;
+  letter-spacing: 1px;
+}
+
+.what_they_say{
+
+  position: absolute;
+  top:28%;
+  color: #fff;
+  text-align: center;
+  width: 100%;
+  font-family:'Inder', sans-serif ;
+  font-size: 3.2vw;
+  letter-spacing: 1px;
+}
+
+.costmer_feedback_flex{
+
+
+    display: flex;
+  flex-wrap: nowrap;
+/*  background-color: DodgerBlue;*/
+  justify-content: center;
+  position: absolute;
+  width: 100%;
+  top: 62%;
+  gap:50px;
+}
+
+.costmer_feedback_flex > div{
+
+   background-color: #181818;
+  width: 320px;
+  color: #ffff;
+  margin: 10px;
+  text-align: center;
+  height: 310px;
+  font-size: 30px;
+  border-radius: 20px;
+/*  justify-content: center;*/
+
+}
+
+.feedback1_dp{
+
+  height: 105px;
+  width: 105px;
+  border-radius: 360px;
+  background-color: yellow;
+/*  position: absolute;*/
+  margin-top: -15%;
+  margin-left: 33%;
+
+}
+
+.feedback1_dp > img{
+
+  width: 77%;
+  height: auto;
+  border-radius: 360px;
+  margin-top: 11%;
+}
+
+#feedback1 > p{
+
+  font-size: 1.2rem;
+  width: 100%;
+  font-family:'Inter', sans-serif ;
+  margin-top: 12%;
+  padding: 0 20% 0 20%;
+}
+
+
+#feedback1 > h4{
+
+  font-size: 1.2rem;
+/*  width: 100%;*/
+  font-family:'Inter', sans-serif ;
+  margin-top: 20%;
+  padding: 0 20% 0 20%;
+
+}
 /*------------------------risponsiv for mobile-----------------------*/
 @media only screen and (max-width: 390px){
 
@@ -760,6 +876,7 @@ padding-bottom: 50px;
 
       height: auto;
       width: 99%;
+/*     background-color: red;*/
 /*     text-align: center;*/
     }
 
@@ -801,7 +918,7 @@ padding-bottom: 50px;
 
        height: auto;
       width: 70%;
-      margin: 0 10% ;
+      margin: 7% 10% ;
 
     }
 
@@ -815,7 +932,7 @@ padding-bottom: 50px;
 
       height: auto;
       width: 70%;
-      margin: 0 12% ;
+      margin: 7% 12% ;
     }
 
     .chef_item3{
@@ -829,8 +946,46 @@ padding-bottom: 50px;
 
       height: auto;
       width: 70%;
-      margin: 0 12% ;
+      margin: 0% 12% ;
     }
+
+.cosmoter_review{
+
+  height: 88rem;
+
+}
+
+.costmer_feedback_flex{
+
+  flex-wrap: wrap;
+  top: 35%;
+  gap:50px;
+}
+
+.costmer_feedback_flex > div{
+
+  height: 290px;
+  width: 290px;
+}
+
+.cosmoter_review_img > img{
+
+  height: 1000px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.first_image{
+
+  font-size: 18px;
+  top: 15%;
+}
+
+.what_they_say{
+
+  font-size: 30px;
+  top: 20%;
+}
 
 }
 
@@ -1090,6 +1245,44 @@ padding-bottom: 50px;
       width: 70%;
       margin: 0 12% ;
     }
+
+    .cosmoter_review{
+
+  height: 90rem;
+
+}
+
+.costmer_feedback_flex{
+
+  flex-wrap: wrap;
+  top: 35%;
+  gap:50px;
+}
+
+.costmer_feedback_flex > div{
+
+  height: 320px;
+  width: 310px;
+}
+
+.cosmoter_review_img > img{
+
+  height: 800px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.first_image{
+
+  font-size: 18px;
+  top: 15%;
+}
+
+.what_they_say{
+
+  font-size: 30px;
+  top: 20%;
+}
 }
 
 /*------------------------risponsiv for tablet end-----------------------*/
