--- a/style.css
+++ b/style.css
@@ -779,26 +779,134 @@ background: transparent;
 
 }
 
-footer{
-
-  height: auto;
-  width: 100%;
-  background-color:#181818 ;
-  margin-top: 120px;
-}
-
-.foooter{
-
+.footer {
   display: flex;
-  flex-wrap: nowrap;
+  flex-flow: row wrap;
+  padding: 30px 30px 20px 30px;
+  color: #fff;
+  background-color: #26226  6 ;
+  border-top: 1px solid #e5e5e5;
+  margin-top: 150px;
+  font-family: 'Inter' , sans-serif;
+  background-color: #181818;
 }
 
-.footer_item{
+.footer > * {
+  flex:  1 100%;
+}
 
-  height: 300px;
-  width: 25%;
-  background-color: red;
-  border:1px solid black;
+.footer__addr {
+  margin-right: 1.25em;
+  margin-bottom: 2em;
+}
+
+.footer__logo {
+  font-family: 'Pacifico', cursive;
+  font-weight: 400;
+  text-transform: lowercase;
+  font-size: 1.5rem;
+}
+
+.footer__addr h2 {
+  margin-top: 1.3em;
+  font-size: 15px;
+  font-weight: 400;
+}
+
+.nav__title {
+  font-weight: 400;
+  font-size: 15px;
+}
+
+.footer address {
+  font-style: normal;
+  color: #999;
+}
+
+.footer__btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 36px;
+  max-width: max-content;
+  background-color: #E8E8E8;
+  border-radius: 100px;
+  color: #000;
+  line-height: 0;
+  margin: 0.6em 0;
+  font-size: 1rem;
+  padding: 0 1.3em;
+}
+
+.footer ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+.footer li {
+  line-height: 2em;
+}
+
+.footer a {
+  text-decoration: none;
+}
+
+.footer__nav {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.footer__nav > * {
+  flex: 1 50%;
+  margin-right: 1.25em;
+}
+
+.nav__ul a {
+  color: #999;
+}
+
+.nav__ul--extra {
+  column-count: 2;
+  column-gap: 1.25em;
+}
+
+.legal {
+  display: flex;
+  flex-wrap: wrap;
+  color: #999;
+}
+  
+.legal__links {
+  display: flex;
+  align-items: center;
+}
+
+.heart {
+  color: red;
+}
+
+@media screen and (min-width: 24.375em) {
+  .legal .legal__links {
+    margin-left: auto;
+  }
+}
+
+@media screen and (min-width: 40.375em) {
+  .footer__nav > * {
+    flex: 1;
+  }
+  
+  .nav__item--extra {
+    flex-grow: 2;
+  }
+  
+  .footer__addr {
+    flex: 1 0px;
+  }
+  
+  .footer__nav {
+    flex: 2 0px;
+  }
 }
 
 /*------------------------risponsiv for mobile-----------------------*/
@@ -1318,7 +1426,7 @@ footer{
 
       height: auto;
       width: 99%;
-     background-color: red;
+/*     background-color: red;*/
 /*     text-align: center;*/
     }
 
